--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.1.3",
     "proshop2": "file:..",
     "react": "^18.2.0",
